--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "sakura-js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Vanilla JS version of jQuery-Sakura: Make it rain sakura petals.",
   "main": "dist/sakura.js",
   "homepage": "https://github.com/jhammann/sakura",
   "author": "Jeroen Hammann",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.0.0",
-    "gulp-eslint": "^5.0.0",
-    "gulp-header": "^2.0.7",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-eslint": "^6.0.0",
+    "gulp-header": "^2.0.9",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
